--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,39 +6,20 @@
     font-family: "Quicksand", serif;
     color: #333;
 }
-/*.navbar {*/
-/*    padding: 20px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    margin: 0 auto;*/
-/*    border-bottom: 1px solid #f2f2f2;*/
-/*}*/
 
-/*.navbar h1 {*/
-/*    color: #f1356d;*/
-/*}*/
+#container {
+    margin-top: 20px;
+}
 
-/*li {*/
-/*    text-decoration: none;*/
-/*}*/
+.box  {
+    width: 45%;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 8px;
+}
 
-/*.navbar .links {*/
-/*    margin-left: auto;*/
-/*}*/
-
-/*.navbar a {*/
-/*    margin-left: 16px;*/
-/*    text-decoration: none;*/
-/*    padding: 6px;*/
-/*}*/
-
-/*.navbar a:hover {*/
-/*    color: #f1356d;*/
-/*}*/
-
-/*.content {*/
-/*    max-width: 600px;*/
-/*    margin: 40px auto;*/
-/*    padding: 20px;*/
-/*}*/
+#interestBar  {
+    border: 1px solid black;
+    border-radius: 8px;
+}
 
