--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,8 @@
 #container {
     margin-top: 40px;
     margin-bottom: 40px;
+    width: 100%;
+    height: 600px;
 }
 
 .box  {
@@ -31,15 +33,52 @@
     padding: 20px;
 }
 
+.product-preview {
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
 .product-preview a{
     text-decoration: none;
+}
 
+.product-preview:hover {
+    box-shadow: 1px 3px 5px rgba(0,0,0,2);
 }
 
 .center-title {
     max-width: 400px;
     margin: 0 auto;
     text-align: center;
+}
+
+#register {
+    width: 90%;
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 15px;
+    margin: 20px;
+}
+
+#loginForm {
+    margin: 20px 0 20px 150px;
+    padding: 15px;
+    width: 75%;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+#googleLoginBtn {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    width: 100%;
+}
+
+.product-list {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 
